--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@iexec/dataprotector": "2.0.0-beta.10",
+    "@privy-io/react-auth": "^1.88.4",
+    "@privy-io/wagmi": "^0.2.12",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-slot": "^1.0.2",
     "@rainbow-me/rainbowkit": "^2.1.3",
