--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@formkit/auto-animate": "^0.8.2",
+    "@hookform/resolvers": "^3.9.0",
     "@iexec/dataprotector": "2.0.0-beta.10",
     "@privy-io/react-auth": "^1.88.4",
     "@privy-io/wagmi": "^0.2.12",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@rainbow-me/rainbowkit": "^2.1.3",
     "@t3-oss/env-nextjs": "^0.10.1",
@@ -25,6 +28,7 @@
     "react": "^18",
     "react-blockies": "^1.4.1",
     "react-dom": "^18",
+    "react-hook-form": "^7.53.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "viem": "2.x",
