--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@iexec/dataprotector": "2.0.0-beta.10",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.2.2",
     "@rainbow-me/rainbowkit": "^2.1.3",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tanstack/react-query": "^5.51.1",
+    "@wagmi/core": "^2.13.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.381.0",
