--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@wagmi/core": "^2.13.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "crypto-js": "^4.2.0",
     "framer-motion": "^11.11.1",
     "geist": "^1.3.1",
     "lucide-react": "^0.381.0",
@@ -42,6 +43,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.2.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-blockies": "^1.4.4",
