--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "crypto-js": "^4.2.0",
     "es-toolkit": "^1.23.0",
     "framer-motion": "^11.11.1",
+    "frames.js": "^0.19.3",
     "geist": "^1.3.1",
     "lucide-react": "^0.381.0",
     "next": "14.2.3",
