--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@farcaster/hub-nodejs": "^0.12.4",
     "@formkit/auto-animate": "^0.8.2",
     "@hookform/resolvers": "^3.9.0",
     "@iexec/dataprotector": "2.0.0-beta.10",
@@ -20,7 +21,6 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.2.2",
     "@rainbow-me/rainbowkit": "^2.1.3",
-    "@standard-crypto/farcaster-js": "^7.4.0",
     "@supabase/ssr": "^0.5.1",
     "@supabase/supabase-js": "^2.45.4",
     "@t3-oss/env-nextjs": "^0.10.1",
@@ -37,6 +37,7 @@
     "lucide-react": "^0.381.0",
     "next": "14.2.14",
     "next-themes": "^0.3.0",
+    "qrcode.react": "^4.0.1",
     "react": "^18",
     "react-blockies": "^1.4.1",
     "react-dom": "^18",
