--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.2.2",
     "@rainbow-me/rainbowkit": "^2.1.3",
+    "@serwist/next": "^9.0.9",
     "@supabase/ssr": "^0.5.1",
     "@supabase/supabase-js": "^2.45.4",
     "@t3-oss/env-nextjs": "^0.10.1",
@@ -62,6 +63,7 @@
     "eslint-plugin-tailwindcss": "^3.17.0",
     "postcss": "^8",
     "prettier": "^3.2.5",
+    "serwist": "^9.0.9",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
